# loom-agent

./: .cspell.json  .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  AGENT_RUN_FIX.md  API_REFACTORING_SUMMARY.md  ARCHITECTURE.md  CHANGELOG.md  COMPLETE_SESSION_SUMMARY.md  CONTEXT_ASSEMBLER_SUMMARY.md  CONTEXT_PARTITIONS_FIX.md  CONTRIBUTING.md  CREW_ROUTING_GUIDE.md  DECISION_ENGINE_FIX.md  EMPTY_SHELL_METHODS.md  FRAMEWORK_GUIDE.md  FULL_INTEGRATION_ANALYSIS.md  GEMINI_PROVIDER_FIX.md  GITHUB_RELEASE_v0_0_8.md  GITHUB_RELEASE_v0_1_0.md  IMPLEMENTATION_GAPS.md  IMPLEMENTATION_TIMELINE.md  LICENSE  LLM_ARCHITECTURE_SUMMARY.md  LLM_SUPPORT.md  LOOM_2.0_DEVELOPMENT_PLAN.md  LOOM_V2.2_ROADMAP.md  Langchain Agent Axioms v2.1.md  Langchain Agent Axioms v2.2.md  Langchain Agent Axioms v2.md  MANIFESTO.md  MICRO_COMPACT_VERIFICATION.md  OBSERVER_FIX.md  P0_COMPLETION_SUMMARY.md  P0_PROGRESS.md  P1_COMPLETION_SUMMARY.md  P1_PLAN.md  P1_PROGRESS.md  (+98 more)
benchmarks/: __init__.py  dimensions.py  framework.py  logic.py  mechanism.py  perf.py  runner.py
cc分析/: An LLM's Perspective: What It's Actually Like to Receive These Instructions.md  Architecture:The Engine Romm.md  Control Flow.md  File Editing: AI-Assisted Code Modification.md  Novel Components: The Innovations That Define Claude Code.md  Prompt Engineering: The Art of Instructing AI.md  Tools.md  dataStructures.md  dependencies.md
department/: LOOM_FRAMEWORK_DESIGN_V2.md  LOOM_FRAMEWORK_VALIDATION.md  LOOM_IMPLEMENTATION_SUMMARY.md  LOOM_IMPROVEMENT_PLAN.md  LOOM_PROJECT_COMPLETION.md  LOOM_SUMMARY.md  LOOM_UNIFIED_DEVELOPER_GUIDE.md  Loom Agent Framework - 详细设计文档 (v1.2).md  MODEL_POOL_DESIGN.md  MODEL_POOL_QUICKSTART.md
docs/: AGENT_PACKS_API.md  AGENT_PERMISSIONS.md  API_EXPOSURE_CHECKLIST.md  API_REFACTOR_DESIGN.md  API_REFERENCE_v0_0_8.md  ARCHITECTURE_REFACTOR.md  CALLBACKS_SPEC.md  CLEANUP_DEPRECATED_INTERFACES.md  CONTEXT_ASSEMBLER_FINAL_FORM.md  CONTEXT_ASSEMBLER_GUIDE.md  COT_FEEDBACK_MECHANISM.md  CREW_SYSTEM_IMPLEMENTATION_SUMMARY.md  DEEPWIKY_MIGRATION.md  DOCUMENTATION_STRUCTURE.md  EMBEDDING_RETRIEVER_GUIDE.md  HOOKS_USAGE_GUIDE.md  INDEX.md  LOOM_0_0_3_API_EXPOSURE_PLAN.md  LOOM_0_0_3_OPTIMIZATION_SUMMARY.md  LOOM_0_0_3_REFACTORING_SUMMARY.md  LOOM_0_0_3_UNIFIED_COORDINATION_SUMMARY.md  LOOM_AGENT_0.5.0_RESEARCH_REPORT.md  LOOM_FRAMEWORK_GUIDE.md  LOOM_USER_GUIDE.md  Lexicon Agent: 系统设计与开发指南 v2.0.md  MIGRATION_GUIDE_V0_1.md  OPTIMIZATION_SKILLS_TOOLS.md  PHASE_5-8_IMPLEMENTATION_SUMMARY.md  PRODUCTION_GUIDE.md  QUICKSTART_v0_0_8.md  QUICK_REFERENCE.md  README.md  RESEARCH_API_CAPABILITIES.md  RESEARCH_CONFIG_AGENT_CAPABILITIES.md  RESEARCH_MEMORY_FRACTAL.md  RESEARCH_PROTOCOL_EVENTS_RUNTIME.md  RESEARCH_REPORT_V0.5.md  TASK_1.1_COMPLETION_SUMMARY.md  TASK_1.2_COMPLETION_SUMMARY.md  TASK_1.3_COMPLETION_SUMMARY.md  (+22 more)
en/: index.html
examples/: 00_agent_overview.py  01_hello_agent.py  02_provider_config.py  03_events_and_artifacts.py  04_multi_task_session.py  05_multi_agent.py  06_evolution.py  07_context_pressure.py  08_skill_system.py  09_advanced_skills.py  10_sprint2_features.py  11_sprint3_features.py  12_heartbeat_and_safety.py  13_repo_copilot.py  14_internal_docs_qa.py  15_approval_workflow.py  16_signal_adapters.py  17_runtime_kernel_platform.py  CLI_DEMO_OPTIMIZATION.md  KNOWLEDGE_RAG_README.md  README.md  README_CODE_ASSISTANT.md  README_RAG_EXAMPLES.md  agent_events_demo.py  agent_minimal_one_liner.py  audit_service.py  autonomous_agent_demo.py  basic_agent.py  basic_usage.py  cli_stream_demo_v4.py  code_agent_minimal.py  code_agent_with_tools.py  code_assistant_demo.py  collective_unconscious_demo.py  context_assembler_demo.py  context_demo.py  conversational_assistant_demo.py  conversational_assistant_tui.py  crew_demo.py  custom_task_handlers.py  (+48 more)
lexicon_agent/: __init__.py  main.py  types.py
loom/: README.md  __init__.py  __version__.py  agent.py  builder.py  config.py  errors.py  exceptions.py  session.py  tooling.py
loom-studio/: STUDIO_USAGE.md  start.sh  test_studio.py
releases/: v0.0.1.md  v0.1.6.md
scripts/: cleanup_docs.sh
search/: search_index.json
(+1636 files in other folders)
