[tool.poetry]
name = "lexicon-agent"
version = "2.0.0"
description = "下一代上下文工程驱动的智能助理框架"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncio = "^3.4.3"
aiohttp = "^3.9.0"
pydantic = "^2.5.0"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
websockets = "^12.0"
anthropic = "^0.7.0"
openai = "^1.6.0"
chromadb = "^0.4.0"
numpy = "^1.24.0"
structlog = "^23.2.0"
weakref-tools = "^1.0.0"
asyncio-throttle = "^1.0.2"
cachetools = "^5.3.0"
psutil = "^5.9.0"
docker = "^7.0.0"
mcp = "^0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true