[tool.poetry]
name = "loom-agent"
version = "0.6.1"
description = "Minimal self-organizing multi-agent framework"
authors = ["kongusen <wanghaishan0210@gmail.com>"]
readme = "README.md"
license = "Apache-2.0 with Commons Clause"
packages = [{ include = "loom" }]

homepage = "https://github.com/kongusen/loom-agent"
repository = "https://github.com/kongusen/loom-agent"
documentation = "https://github.com/kongusen/loom-agent#readme"

keywords = ["ai", "llm", "agent", "multi-agent", "rag", "tooling", "asyncio"]

classifiers = [
  "Development Status :: 3 - Alpha",                            # First release - Alpha stage
  "Intended Audience :: Developers",
  "License :: Other/Proprietary License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Framework :: AsyncIO",
  "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.0"
openai = { version = "^1.10.0", optional = true }
anthropic = { version = "^0.40.0", optional = true }

[tool.poetry.extras]
openai = ["openai"]
anthropic = ["anthropic"]
all = ["openai", "anthropic"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-mock = "^3.12.0"
ruff = "^0.3.0"
mypy = "^1.8.0"
pytest-cov = "^7.0.0"
openai = "^1.10.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
  ".git",
  ".venv",
  "__pycache__",
  "*.egg-info",
  ".pytest_cache",
  ".mypy_cache",
  "build",
  "dist",
  "old",
]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # Pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "ARG", # flake8-unused-arguments
  "SIM", # flake8-simplify
]
ignore = [
  "E501", # line too long (handled by formatter)
  "B008", # do not perform function calls in argument defaults
  "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG"]
"examples/**/*.py" = ["ARG"]
"benchmarks/**/*.py" = ["ARG"]

[tool.ruff.lint.isort]
known-first-party = ["loom"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["tests/", "examples/", "build/", "dist/"]
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
